--- a/TEMPLATE/TestProj.cbp
+++ b/TEMPLATE/TestProj.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="AllegroProj" />
+		<Option title="TestProj" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/AllegroProj" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/test" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -116,23 +116,6 @@
 		</Unit>
 		<Unit filename="AL_general.h" />
 		<Unit filename="Common.h" />
-		<Unit filename="GUI_general.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="GUI_general.h" />
-		<Unit filename="GUI_mouse.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="config_build.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="config_draw.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="config_struct.h" />
-		<Unit filename="config_window.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
