--- a/FUNCTIONS/GAME_FRAME/TestProj.cbp
+++ b/FUNCTIONS/GAME_FRAME/TestProj.cbp
@@ -123,6 +123,9 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="stage1.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
