--- a/TEMPLATE/TestProj.cbp
+++ b/TEMPLATE/TestProj.cbp
@@ -2,25 +2,21 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="TestProj" />
+		<Option title="testProj" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/test" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/testProj" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="D:/AllegroLib_5.2.8/include" />
 					<Add directory="C:/AllegroLib_5.2.8/include" />
+					<Add directory="D:/AllegroLib_5.2.8/include" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
-					<Add option="-static-libstdc++" />
-					<Add option="-static-libgcc" />
-					<Add option="-static" />
 					<Add option="-lallegro_monolith-debug.dll" />
 					<Add option="-lallegro_acodec-debug.dll" />
 					<Add option="-lallegro_audio-debug.dll" />
@@ -52,64 +48,35 @@
 					<Add option="-lwebpdemux" />
 					<Add option="-lzlib" />
 					<Add option="-lstdc++" />
-					<Add directory="D:/AllegroLib_5.2.8/lib" />
 					<Add directory="C:/AllegroLib_5.2.8/lib" />
+					<Add directory="D:/AllegroLib_5.2.8/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/AllegroProj" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/testProj" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="C:/AllegroLib_5.2.8/include" />
+					<Add directory="D:/AllegroLib_5.2.8/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add option="-lallegro_monolith.dll" />
-					<Add option="-lallegro_acodec.dll" />
-					<Add option="-lallegro_audio.dll" />
-					<Add option="-lallegro_color.dll" />
-					<Add option="-lallegro_dialog.dll" />
-					<Add option="-lallegro_font.dll" />
-					<Add option="-lallegro_image.dll" />
-					<Add option="-lallegro_main.dll" />
-					<Add option="-lallegro_memfile.dll" />
-					<Add option="-lallegro_physfs.dll" />
-					<Add option="-lallegro_primitives.dll" />
-					<Add option="-lallegro_ttf.dll" />
-					<Add option="-lallegro_video.dll" />
-					<Add option="-lallegro.dll" />
-					<Add option="-ldumb" />
-					<Add option="-lFLAC" />
-					<Add option="-lfreetype" />
-					<Add option="-ljpeg" />
-					<Add option="-logg" />
-					<Add option="-lopus" />
-					<Add option="-lopusfile" />
-					<Add option="-lphysfs" />
-					<Add option="-lpng16" />
-					<Add option="-ltheoradec" />
-					<Add option="-lvorbis" />
-					<Add option="-lvorbisfile" />
-					<Add option="-lwebp" />
-					<Add option="-lwebpdecoder" />
-					<Add option="-lwebpdemux" />
-					<Add option="-lzlib" />
-					<Add option="-lstdc++" />
 					<Add directory="C:/AllegroLib_5.2.8/lib" />
+					<Add directory="D:/AllegroLib_5.2.8/lib" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="D:/AllegroLib_5.2.8/include" />
 			<Add directory="C:/AllegroLib_5.2.8/include" />
+			<Add directory="D:/AllegroLib_5.2.8/include" />
 		</Compiler>
 		<Linker>
-			<Add directory="D:/AllegroLib_5.2.8/lib" />
 			<Add directory="C:/AllegroLib_5.2.8/lib" />
+			<Add directory="D:/AllegroLib_5.2.8/lib" />
 		</Linker>
 		<Unit filename="AL_general.c">
 			<Option compilerVar="CC" />
