--- a/FUNCTIONS/STAGE_FILE/TestProj.cbp
+++ b/FUNCTIONS/STAGE_FILE/TestProj.cbp
@@ -100,6 +100,9 @@
 		<Unit filename="bossFight.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="loadStage.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
